# qdrant_manager

./: LICENSE  README.md  __init__.py  __main__.py  cleaner.py  cleaner_cli.py  config.py  dependencies.py  manager.py  manager_cli.py  pyproject.toml  requirements.txt
qdrant_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
